Document local Android dev setup and the JDK 25 build workaround
Captures the env vars and the AGP/JDK-25 CMake false-failure fix
discovered getting the app running on a real emulator for the first
time, so this doesn't need re-diagnosing on a fresh machine.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>